--- a/angularApp/src/index.html
+++ b/angularApp/src/index.html
@@ -6,32 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script>
-    async function loadGoogleMapsApi() {
-      try {
-        // Pozovi C# API za dobijanje API ključa
-        const response = await fetch('https://localhost:7058/UsluzniObjekt/GetGoogleMapsApiKey');
-        if (!response.ok) {
-          throw new Error('Ne mogu da preuzmem API ključ.');
-        }
-        const apiKey = await response.text();
-        // Kreiraj dinamički <script> tag za Google Maps
-        const script = document.createElement('script');
-        script.src = `https://maps.googleapis.com/maps/api/js?key=${apiKey}&callback=initMap&loading=async`;
-        script.defer = true;
-        document.head.appendChild(script);
-      } catch (error) {
-        console.error('Greška prilikom učitavanja Google Maps API:', error);
-      }
-    }
-
-    // Pozovi funkciju za učitavanje Google Maps API
-    loadGoogleMapsApi();
-
-    function initMap() {
-      console.log('Google Maps API je uspešno učitan.');
-    }
-  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=[Ovdje ide map API key]&loading=async"></script>
 </head>
 <body>
   <app-root></app-root>
