Dodjeljivanje pristupa sadržajima aplikacije dosljednim rolama, poboljšanje vizualnog feedbacka i uređivanje stilova

--- a/angularApp/src/index.html
+++ b/angularApp/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://maps.googleapis.com/maps/api/js?key=[Api key]&loading=async"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1b7A8pDIHL4r0PxZ4lpQWw0GQJajG_l0&loading=async"></script>
 </head>
 <body>
   <app-root></app-root>
